# geosteering-ai

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .worktreeinclude  CLAUDE.md  Dockerfile.cpu  README.md  pyproject.toml
.claude/: anti-patterns.txt  parallelism_rules.py  perf_baseline.json  ptbr-words.txt  recovery.sh  settings.json  state.json.template
.claude/commands/: arxiv-search.md  consensus-search.md  geosteering-code-reviewer.md  geosteering-code-v2.md  geosteering-colab-mcp.md  geosteering-data.md  geosteering-documentation.md  geosteering-jax.md  geosteering-losses.md  geosteering-models.md  geosteering-orchestrator.md  geosteering-perf-baseline.md  geosteering-perf-reviewer.md  geosteering-physics-reviewer.md  geosteering-physics.md  geosteering-pinns.md  geosteering-premortem-analyst.md  geosteering-realtime.md  geosteering-research.md  geosteering-security-auditor.md  geosteering-simulation-manager.md  geosteering-simulator-fortran.md  geosteering-simulator-numba.md  geosteering-simulator-python.md  geosteering-v2.md  geosteering-v5015.md
.claude/hooks/: acquire-lock.sh  autoformat.sh  backup-pre-edit.sh  check-anti-patterns-precommit.sh  check-anti-patterns.sh  check-perf-regression.sh  check-ptbr-accentuation.sh  check-version-references.sh  colab-token-refresh.sh  compile-check.sh  ensure-tatu-linux.sh  generate-pr-description.sh  lint-v2-standards.sh  protect-critical-files.sh  reinject-errata.sh  release-lock.sh  run-fortran-parity.sh  run-pytest.sh  setup-environment.sh  strip_code_comments.py  validate-no-pytorch.sh  validate-physics.sh  validate-scientific-refs.sh
.claude/scripts/: worktree-create.sh
.claude/telemetry/: parallelism_dashboard.py
.claude/templates/: pr_description_template.md  report_template.md
.github/workflows/: ci.yml  docker.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
Fortran_Gerador/: Makefile  PerfilaAnisoOmp.f08  RunAnisoOmp.f08  batch_runner.py  buildValidamodels.py  fifthBuildTIVModels.py  filtersv2.f08  magneticdipoles.f08  model.in  model.in.n10_synthetic  model.in.n15_multiTR  model.in.n15_production  parameters.f08  sixth1DCNN_LSTM.py  tatu.x  tatu_O0_head.x  tatu_O0_phase3.x  tatu_dbg.x  tatu_f2py_wrapper.f08  tatu_phase2_O0.x  tatu_phase2_O3.x  tatu_phase4_O0.x  tatu_phase4_O3.x  utils.f08  validate_jacobian.py
Fortran_Gerador/.ld_wrapper/: ld
Fortran_Gerador/bench/: .gitignore  README.md  run_bench.sh  validate_numeric.py  validate_numeric_extensive.py
apps/: __init__.py
apps/sim_manager/: __init__.py  app.py  boot_warmup.py  main_window.py  startup_dialog.py
benchmarks/: _sprintc_phase_a_gen.py  _sprintc_phase_b_train.py  _v245_batch_sweep.py  _v245_h600.py  _v246_18cfg_hetero_chunk.py  _v246_18cfg_homo_vs_hetero.py  _v246_global_bucket_proto.py  _v246_nmodels_crossover.py  bench_multi_vs_fortran.py  bench_numba_vs_fortran_local.py  bench_numba_vs_jax_gpu.py  bench_sprint10_unified_vs_bucketed.py  bench_sprint12_regression.py  bench_v212_workers.py  bench_v214_numba.py  bench_v22_flat_prange.py  bench_v236_tile_block.py  bench_v237_cross_platform.py  bench_v237_flat_heuristic.py  profile_freezing_baseline.py
benchmarks/results/: a6000_baseline_v2.44.csv  bench_numba_vs_fortran_summary.csv  bench_numba_vs_fortran_summary.md  v2.45_600pos_AG_16w4t.csv  v2.45_600pos_H_16w4t.csv  v2.45_batch_sweep.csv  v237_cross_platform_IntelR_CoreTM_i9-9980HK_CPU_@_2.40GHz_20260515T191405.json  v237_cross_platform_IntelR_CoreTM_i9-9980HK_CPU_@_2.40GHz_20260515T191635.json
configs/: baseline.yaml  geosinais_p4.yaml  nstage_n2.yaml  nstage_n3.yaml  realtime_causal.yaml  robusto.yaml
docs/: ARCHITECTURE_v2.md  CHANGELOG.md  INDEX.md  MIGRATION_GUIDE.md  PERFORMANCE_BASELINE.md  ROADMAP.md  documentacao_apresentacao_geosteering_ai.md  documentacao_geosteering.md  documentacao_inferencia_offline.md  documentacao_losses.md  documentacao_models.md  documentacao_noises.md  documentacao_pinns.md  known_bugs.md
docs/architecture/: 01_system_architecture.md  02_data_flow.md  03_api_design.md  04_ui_ux_mvvm.md  05_cicd.md  06_mlops.md  README.md  (+1 more)
geosteering_ai/: __init__.py  config.py
legacy/: CLAUDE_v5015_legacy.md
notebooks/: bench_forward_colab.ipynb  bench_jax_gpu_colab.ipynb  bench_jax_gpu_colab_pr14b.ipynb  bench_jax_gpu_colab_pr14d.ipynb  bench_jax_gpu_colab_pr14e.ipynb  bench_jax_gpu_colab_pr14f.ipynb  benchmark_jax_gpu_vs_numba.ipynb  main.ipynb  sprint_3_3_4_2_validation.ipynb  validate_gpu_colab.ipynb  validate_jax_unified_gpu.ipynb
scripts/: count_pytest_pass.py  diagnose_jax_warmup.py  diagnose_numba_warmup.py  extract_hankel_weights.py
sm_experiments/: Experimento_2026-04-18.exp.json  Experimento_2026-04-19.exp.json  Experimento_2026-04-20.exp.json  Experimento_2026-04-21.exp.json  Experimento_2026-04-22.exp.json  Experimento_2026-04-23.exp.json  Experimento_2026-04-24.exp.json  Experimento_2026-04-25.exp.json  benchmark_summary.csv  benchmark_summary.md
sm_output/: benchmark_summary.csv  benchmark_summary.md
specs/: CONSTITUTION.md  INDEX.md  README.md  ROADMAP.md
tests/: __init__.py  _fortran_helpers.py  conftest.py  conftest_qt.py  test_api_health.py  test_api_predict.py  test_api_schemas.py  test_boundaries.py  test_cli_backend_auto.py  test_cli_backend_table.py  test_cli_benchmark_flags.py  test_cli_dat_save.py  test_cli_geometry.py  test_cli_hwinfo.py  test_cli_jax_crash_guard.py  test_cli_mvp.py  test_cli_warmup_background.py  test_cli_warmup_entry_point.py  test_cli_warmup_jax.py  test_config.py  test_data_pipeline.py  test_evaluation.py  test_gui_antigravity_shell.py  test_gui_foundation.py  test_gui_mvvm_base.py  test_gui_persistence.py  test_gui_plot_backends.py  test_gui_theme.py  test_gui_ui_files.py  test_hooks_i25.py  test_inference.py  test_inference_geosignals.py  test_jax_cache_setup.py  test_known_bugs.py  test_legacy_integration.py  test_losses.py  test_models.py  test_multi_agent_locks.py  test_noise.py  test_perf_baseline_h.py  (+100 more)
tools/: cleanup_backups.sh  file_watcher_daemon.py
(+533 files in other folders)
