[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geosteering-ai"
version = "2.0.0"
description = "Pipeline de Inversao Geofisica 1D com Deep Learning para Geosteering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Daniel Leal"},
]
keywords = [
    "geophysics", "geosteering", "deep-learning", "inversion",
    "electromagnetic", "resistivity", "LWD", "well-logging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: TensorFlow",
]

dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
train = [
    "tensorflow>=2.13",
]
viz = [
    "matplotlib>=3.5",
]
hpo = [
    "optuna>=3.0",
]
all = [
    "tensorflow>=2.13",
    "matplotlib>=3.5",
    "optuna>=3.0",
    "joblib>=1.2",
    "pandas>=2.0",
    "tqdm>=4.65",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
include = ["geosteering_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
