[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geosteering-ai"
version = "2.0.0"
description = "Pipeline de Inversao Geofisica 1D com Deep Learning para Geosteering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.15"
authors = [
    {name = "Daniel Leal"},
]
keywords = [
    "geophysics", "geosteering", "deep-learning", "inversion",
    "electromagnetic", "resistivity", "LWD", "well-logging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.13",
    "Framework :: TensorFlow",
]

dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
train = [
    "tensorflow>=2.13",
]
viz = [
    "matplotlib>=3.5",
]
hpo = [
    "optuna>=3.0",
]
all = [
    "tensorflow>=2.13",
    "matplotlib>=3.5",
    "optuna>=3.0",
    "joblib>=1.2",
    "pandas>=2.0",
    "tqdm>=4.65",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    # Multi-agent infrastructure (Etapa 1 Quality Mesh)
    "watchdog>=3.0",     # tools/file_watcher_daemon.py
    "psutil>=5.9",       # LockManager PID checks (opt-in)
    "pre-commit>=3.0",   # .pre-commit-config.yaml
]

[project.scripts]
# Sprint v2.24 — I2.6 — CLI MVP
geosteering-cli = "geosteering_ai.cli:main"
# Sprint v2.32 — Warmup CLI entry point (síncrono)
geosteering-warmup = "geosteering_ai.cli.warmup:main"

[tool.setuptools.packages.find]
include = ["geosteering_ai*"]

[tool.setuptools.package-data]
"geosteering_ai.simulation.filters" = ["*.npz", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "slow: marca testes lentos (>30s) — pulados em CI rápido com -m 'not slow'",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
