[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geosteering-ai"
version = "2.0.0"
description = "Pipeline de Inversao Geofisica 1D com Deep Learning para Geosteering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.15"
authors = [
    {name = "Daniel Leal"},
]
keywords = [
    "geophysics", "geosteering", "deep-learning", "inversion",
    "electromagnetic", "resistivity", "LWD", "well-logging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.13",
    "Framework :: TensorFlow",
]

dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
train = [
    "tensorflow>=2.13",
]
viz = [
    "matplotlib>=3.5",
]
hpo = [
    "optuna>=3.0",
]
# Sprint O4 (v2.44) — backends do simulador (JAX CPU + Numba). São deps de
# RUNTIME do simulador (_jax/ e _numba/), antes não declaradas — a CI nunca
# os instalava, derrubando o step geosteering-warmup. `jax` aqui é a base CPU;
# em GPU instale `jax[cuda12]` separadamente (Colab/local), que sobrepõe.
sim = [
    "jax>=0.4.30",
    "numba>=0.59",
]
# Sprint v2.39 — I2.7 — API REST MVP (FastAPI + Pydantic v2 + Uvicorn)
api = [
    "fastapi>=0.110",
    "pydantic>=2.5",
    "uvicorn[standard]>=0.27",
]
# Spec 0004 (keystone Fase 0) — fundação GUI `geosteering_ai/gui/`. Binding Qt6
# MÍNIMO compartilhado pelo Simulation Manager e pelo futuro Geosteering AI Studio.
# OPT-IN: o `core` (models/losses/training/inference/data/simulation) NUNCA importa
# Qt — só apps GUI dependem deste extra. PyQt6 é o default do projeto; `gui.qt_compat`
# também detecta PySide6 (a escolha de binding comercial é ADR futuro — D-A do blueprint).
gui = [
    "PyQt6>=6.6",
]
# Backends de plotagem opcionais do Simulation Manager (`sm_plot_backends/`):
# pyqtgraph (Qt-native, realtime 30 fps) + plotly (HTML interativo). Ambos são
# lazy-imported com guarda `is_available()` — o pacote funciona sem eles, e
# `available_backends()` simplesmente os omite quando ausentes.
# OPT-IN DELIBERADO: este grupo NÃO entra em `all` nem no conjunto instalado
# pela CI (`[dev,viz,train,hpo,sim]`) — é GUI/pesado (~150 MB com WebEngine) e
# o caminho de testes degrada graciosamente sem ele. Risco de drift de
# resolução num runner CPU limpo também recomenda mantê-lo isolado.
# PyQt6-WebEngine (QWebEngineView) + kaleido (export estático) habilitam o
# PlotlyCanvas por completo. Combo validado: pyqtgraph 0.14 · plotly 6.8 ·
# PyQt6-WebEngine 6.11 · kaleido 1.3 (Python 3.13).
gui-plot = [
    "pyqtgraph>=0.13",
    "plotly>=5.20",
    "PyQt6-WebEngine>=6.6",   # QWebEngineView — necessário p/ o PlotlyCanvas
    "kaleido>=0.2",           # export estático de imagem do Plotly (opcional)
]
all = [
    "tensorflow>=2.13",
    "matplotlib>=3.5",
    "optuna>=3.0",
    "joblib>=1.2",
    "pandas>=2.0",
    "tqdm>=4.65",
    # Sprint O4 — backends do simulador (JAX CPU + Numba)
    "jax>=0.4.30",
    "numba>=0.59",
    # Sprint v2.39 — API REST stack
    "fastapi>=0.110",
    "pydantic>=2.5",
    "uvicorn[standard]>=0.27",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.4",    # Sprint v2.33 — Qt GUI tests (qtbot fixture)
    # Sprint O4 (v2.44): binding Qt — pytest-qt EXIGE PyQt6/PyQt5/PySide6 ao
    # carregar (mesmo sem rodar GUI tests). Antes não declarado → 'pytest tests/'
    # falhava com exit 4 na CI assim que o warmup parou de derrubar o job antes.
    # Import headless basta p/ o plugin; GUI tests reais usam xvfb (step à parte).
    "PyQt6>=6.6",
    "mypy>=1.0",
    # Multi-agent infrastructure (Etapa 1 Quality Mesh)
    "watchdog>=3.0",     # tools/file_watcher_daemon.py
    "psutil>=5.9",       # LockManager PID checks (opt-in)
    "pre-commit>=3.0",   # .pre-commit-config.yaml
    # Sprint v2.39 — TestClient para testes da API REST
    "httpx>=0.27",
]

[project.scripts]
# Sprint v2.24 — I2.6 — CLI MVP
geosteering-cli = "geosteering_ai.cli:main"
# Sprint v2.32 — Warmup CLI entry point (síncrono)
geosteering-warmup = "geosteering_ai.cli.warmup:main"
# Sprint v2.39 — I2.7 — API REST MVP (uvicorn launcher)
geosteering-api = "geosteering_ai.api.cli:main"

[tool.setuptools.packages.find]
include = ["geosteering_ai*"]

[tool.setuptools.package-data]
"geosteering_ai.simulation.filters" = ["*.npz", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "slow: marca testes lentos (>30s) — pulados em CI rápido com -m 'not slow'",
    "gui: Sprint v2.33 — testes pytest-qt (requer DISPLAY ou xvfb-run em Linux)",
    "gpu: Sprint v2.40 — testes que requerem GPU física (skip automático sem GPU TF/JAX)",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
